# ArchestraProject

./: .env.example  .gitattributes  .gitignore  AUDIT_REPORT.md  GITHUB_READY_TO_PUSH.md  INSTRUCTIONS.md  MULTI_PR_STRATEGY.md  PRE_PUSH_CHECKLIST.md  README.md  start-automation.ps1
archestra-mcp-poc/: Dockerfile  README.md  app.py  app_hydro.py  app_power.py  app_sewage.py  docker-compose.yml  models.py  pyproject.toml  requirements.txt  run_mcp.py  server.py  simulation.py  start_mcps_http.py  tools.py
archestra-mcp-poc/core/: domain_context.py  infra_registry.py  mcp_server.py  registry.py  schemas.py
archestra-mcp-poc/domains/energy/: tools.py
archestra-mcp-poc/domains/healthcare/: tools.py
archestra-mcp-poc/domains/logistics/: tools.py
archestra-mcp-poc/servers/: hydro_server.py  power_server.py  sewage_server.py
control-center/: .env.example  .gitignore  package-lock.json  package.json  tailwind.config.ts
control-center/app/: error.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
control-center/app/api/resolve/: _archestra.ts  _mcp.ts  route.ts
control-center/app/api/resolve/session/: route.ts
control-center/app/favicon.ico/: route.ts
control-center/components/: AgentTracePanel.tsx  ArchestraPanel.tsx  IncidentPanel.tsx  MapView.tsx  OrchestrationStatus.tsx  SolutionPanel.tsx  StatusBar.tsx  SystemInfoPanel.tsx
control-center/lib/: archestra.ts  infrastructure.ts  orchestration-prompt.ts  orchestration-session.tsx  systemRegistry.ts  telemetrySimulator.ts
control-center/scripts/: copy-cesium-assets.mjs
